@@ -1,4 +1,5 @@
 2015.XX.YY Version 0.2.0
+ * Renamed fetchAttributesWith* methods on AZSCloudBlob to downloadAttributesWith*.
  * Added ability to store and retrieve shared access policies on blob containers.
  * Added ability to generate shared access signatures for blobs and blob containers.
  * Fixed a bug where retrying failed requests was off by default.
